--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ env_logger = "0.10.1"
 tui = "0.19.0"
 crossterm = "0.27.0"
 assert_cmd = "2.0.12"
+serde = { version = "1.0.192", features = ["derive"] }
+csv = "1.3.0"
