--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,5 @@ crossterm = "0.27.0"
 assert_cmd = "2.0.12"
 serde = { version = "1.0.192", features = ["derive"] }
 csv = "1.3.0"
+time = "0.3.31"
+sqlite = "0.34.0"
